--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@ DIT/FT/1B/05
     </div>
     <div class="row">
       <div id="icon-container">
-        <a href="https://linkedin.com/in/denzylchua" target="_blank" class="icons" id="linkedin"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/denzylchua" target="_blank" class="icons" id="linkedin"><i class="fab fa-linkedin"></i></a>
         <a href="mailto:chuadenzyl@gmail.com?Subject=Hello" class="icons" id="email"><i class="fas fa-envelope-square"></i></a>
-        <a href="https://github.com/D3nzyl" target="_blank" class="icons" id="github"><i class="fab fa-github-square"></i></a>
+        <a href="https://www.github.com/D3nzyl" target="_blank" class="icons" id="github"><i class="fab fa-github-square"></i></a>
       </div>  
     </div>
     <div class="row">
@@ -43,16 +43,16 @@ DIT/FT/1B/05
     <div class="row">
       <div class="work-container">
         <a class="work-button" href="./PDF/Resume.pdf" target="_blank"><div class="work-box" id="work1"><p class="work-title">Resume</p></div></a>
-        <a class="work-button" href="https://d3nzyl.github.io/ADES-Connector/" target="_blank"><div class="work-box" id="work2"><p class="work-title">Virtual Queue</p></div></a>\
-        <a class="work-button" href="https://d3nzyl.github.io/PDS/" target="_blank"><div class="work-box" id="work3"><p class="work-title">Data Science (Python)</p></div></a>
+        <a class="work-button" href="https://www.d3nzyl.github.io/ADES-Connector/" target="_blank"><div class="work-box" id="work2"><p class="work-title">Virtual Queue</p></div></a>
+        <a class="work-button" href="https://www.d3nzyl.github.io/PDS/" target="_blank"><div class="work-box" id="work3"><p class="work-title">Data Science (Python)</p></div></a>
         
       </div>
     </div>
     <div class="row">
       <div class="work-container">
         <a class="work-button" href="./PDF/Design_Portfolio.pdf" target="_blank"><div class="work-box" id="work4"><p class="work-title">Design</br>Portfolio</p></div></a>
-        <a class="work-button" href="https://d3nzyl.github.io/tribe/" target="_blank"><div class="work-box" id="work5"><p class="work-title">Tribe Apparel Website</p></div></a>
-        <a class="work-button" href="https://d3nzyl.github.io/My-First-Website/" target="_blank"><div class="work-box" id="work6"><p class="work-title">My First</br>Website</p></div></a>
+        <a class="work-button" href="https://www.d3nzyl.github.io/tribe/" target="_blank"><div class="work-box" id="work5"><p class="work-title">Tribe Apparel Website</p></div></a>
+        <a class="work-button" href="https://www.d3nzyl.github.io/My-First-Website/" target="_blank"><div class="work-box" id="work6"><p class="work-title">My First</br>Website</p></div></a>
       </div>
     </div>
    </div>
