--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@ DIT/FT/1B/05
     <div class="row">
       <div class="work-container">
         <a class="work-button" href="./PDF/Resume.pdf" target="_blank"><div class="work-box" id="work1"><p class="work-title">Resume</p></div></a>
-        <a class="work-button" href="d3nzyl.github.io/ADES-Connector/" target="_blank"><div class="work-box" id="work2"><p class="work-title">Virtual Queue</p></div></a>
-        <a class="work-button" href="d3nzyl.github.io/PDS/" target="_blank"><div class="work-box" id="work3"><p class="work-title">Data Science (Python)</p></div></a>
+        <a class="work-button" href="/ADES-Connector/" target="_blank"><div class="work-box" id="work2"><p class="work-title">Virtual Queue</p></div></a>
+        <a class="work-button" href="/PDS/" target="_blank"><div class="work-box" id="work3"><p class="work-title">Data Science (Python)</p></div></a>
         
       </div>
     </div>
     <div class="row">
       <div class="work-container">
         <a class="work-button" href="./PDF/Design_Portfolio.pdf" target="_blank"><div class="work-box" id="work4"><p class="work-title">Design</br>Portfolio</p></div></a>
-        <a class="work-button" href="d3nzyl.github.io/tribe/" target="_blank"><div class="work-box" id="work5"><p class="work-title">Tribe Apparel Website</p></div></a>
-        <a class="work-button" href="d3nzyl.github.io/My-First-Website/" target="_blank"><div class="work-box" id="work6"><p class="work-title">My First</br>Website</p></div></a>
+        <a class="work-button" href="/tribe/" target="_blank"><div class="work-box" id="work5"><p class="work-title">Tribe Apparel Website</p></div></a>
+        <a class="work-button" href="/My-First-Website/" target="_blank"><div class="work-box" id="work6"><p class="work-title">My First</br>Website</p></div></a>
       </div>
     </div>
    </div>
