--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@ DIT/FT/1B/05
     </div>
     <div class="row">
       <div id="icon-container">
-        <a href="linkedin.com/in/denzylchua" target="_blank" class="icons" id="linkedin"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/denzylchua" target="_blank" class="icons" id="linkedin"><i class="fab fa-linkedin"></i></a>
         <a href="mailto:chuadenzyl@gmail.com?Subject=Hello" class="icons" id="email"><i class="fas fa-envelope-square"></i></a>
-        <a href="github.com/D3nzyl" target="_blank" class="icons" id="github"><i class="fab fa-github-square"></i></a>
+        <a href="https://www.github.com/D3nzyl" target="_blank" class="icons" id="github"><i class="fab fa-github-square"></i></a>
       </div>  
     </div>
     <div class="row">
