--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ DIT/FT/1B/05
       <p id="title" class="mx-auto">Hello there! I'm <b>Denzyl</b></p>
     </div>
     <div class="row">
-      <p id="sub-title" class="mx-auto">Currently an IT student in Singapore Polytechnic</p>
+      <p id="sub-title" class="mx-auto">Currently an IT Student in <a class="sub-title-link" href="https://www.sp.edu.sg/" target="_blank">Singapore Polytechnic</a></br>& Programming Instructor at <a class="sub-title-link" href="https://www.thelab.sg/" target="_blank">The Lab</a>.</p>
     </div>
     <div class="row">
       <div id="icon-container">
