added guess the clr

--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@ DIT/FT/1B/05
       <div class="work-container">
         <a class="work-button" href="./PDF/Design_Portfolio.pdf" target="_blank"><div class="work-box" id="work4"><p class="work-title">Design</br>Portfolio</p></div></a>
         <a class="work-button" href="/tribe/" target="_blank"><div class="work-box" id="work5"><p class="work-title">Tribe Apparel Website</p></div></a>
-        <a class="work-button" href="/My-First-Website/" target="_blank"><div class="work-box" id="work6"><p class="work-title">My First</br>Website</p></div></a>
+        <a class="work-button" href="/Guess-The-Colour/" target="_blank"><div class="work-box" id="work6"><p class="work-title">Guess The</br>Colour</p></div></a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="work-container">
+        <a class="work-button" href="/My-First-Website/" target="_blank"><div class="work-box" id="work7"><p class="work-title">My First</br>Website</p></div></a>
       </div>
     </div>
    </div>
