--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@ DIT/FT/1B/05
           <img src="images/me.png" id="me" class="mx-auto">
     </div>
     <div class="row">
-      <p id="title" class="mx-auto">Hello there! I'm <b>Denzyl</b></p>
+      <p id="title" class="mx-auto">Hello there! I'm <b id="denzyl">Denzyl</b></p>
     </div>
     <div class="row">
-      <p id="sub-title" class="mx-auto">Currently an IT Student in <a class="sub-title-link" href="https://www.sp.edu.sg/soc/courses/full-time-diplomas/information-technology/overview" target="_blank">Singapore Polytechnic</a> & Coding Instructor at <a class="sub-title-link" href="https://www.thelab.sg/" target="_blank">The Lab</a>.</p>
+      <p id="sub-title" class="mx-auto">Currently an Computer Science student in <a class="sub-title-link" href="https://www.ntu.edu.sg/education/undergraduate-programme/bachelor-of-computing-in-computer-science" target="_blank">Nanyang Technological University</a>.</p>
     </div>
     <div class="row">
       <div id="icon-container">
@@ -38,25 +38,20 @@ DIT/FT/1B/05
       </div>  
     </div>
     <div class="row">
-      <p id="text" class="mx-auto">Here are works I have created</p>
+      <p id="text" class="mx-auto">Here are some of my works:</p>
     </div>
     <div class="row">
       <div class="work-container">
         <a class="work-button" href="./PDF/Resume.pdf" target="_blank"><div class="work-box" id="work1"><p class="work-title">Resume</p></div></a>
-        <a class="work-button" href="/ADES-Connector/" target="_blank"><div class="work-box" id="work2"><p class="work-title">Virtual Queue</p></div></a>
+        <a class="work-button" href="./PDF/Design_Portfolio.pdf" target="_blank"><div class="work-box" id="work2"><p class="work-title">Design<br/>Portfolio</p></div></a>
         <a class="work-button" href="/PDS/" target="_blank"><div class="work-box" id="work3"><p class="work-title">Data Science (Python)</p></div></a>
       </div>
     </div>
     <div class="row">
       <div class="work-container">
-        <a class="work-button" href="./PDF/Design_Portfolio.pdf" target="_blank"><div class="work-box" id="work4"><p class="work-title">Design</br>Portfolio</p></div></a>
+        <a class="work-button" href="/gembingo/" target="_blank"><div class="work-box" id="work4"><p class="work-title">NTU GEM Trailblazer Summer Bingo</p></div></a>
         <a class="work-button" href="/tribe/" target="_blank"><div class="work-box" id="work5"><p class="work-title">Tribe Apparel Website</p></div></a>
         <a class="work-button" href="/Guess-The-Colour/" target="_blank"><div class="work-box" id="work6"><p class="work-title">Guess The</br>Colour</p></div></a>
-      </div>
-    </div>
-    <div class="row">
-      <div class="work-container">
-        <a class="work-button" href="/My-First-Website/" target="_blank"><div class="work-box" id="work7"><p class="work-title">My First</br>Website</p></div></a>
       </div>
     </div>
    </div>
