--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ DIT/FT/1B/05
 <head>
   <title>Denzyl</title>
   <link href="css/index.css" rel="stylesheet" />
-  <link rel="icon" href="images/me.png" type="image/x-icon">
+  <link rel="icon" href="images/me2.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
